# yolo_rust_demo

./: .gitignore  Cargo.toml  readme.md  run.bat  test.bat
src/: main.rs
test/: bash.md  run.bat
yolo_binding/: .gitignore  Cargo.toml
yolo_binding/src/: main.rs  yolo.rs
yolo_cli/: Cargo.toml
yolo_cli/src/: lib.rs  main.rs
yolo_shell/: .gitignore  Cargo.toml
yolo_shell/src/: main.rs
yolov8_binding/: .gitignore  Cargo.toml  readme.md
yolov8_binding/src/: main.rs  yolo.rs
yolov8_binding/src/core/: export.rs  load.rs  mod.rs  predict.rs
yolov8_binding/src/utils/: picture.rs
