[package]
name = "yolo_binding"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A yolo prediction frame with torch-rs "
homepage = "https://github.com/zhao-leo/yolov8_rust_demo"
readme = "readme.md"
[dependencies]
tch = "0.19.0"
serde_json = "1.0.138"
zip = "2.2.2"
image = "0.25.5"
imageproc = "0.25.0"
ab_glyph = "0.2.29"
winapi = {version = "0.3.9", features = ["libloaderapi"]}
